--- a/airline/templates/airline/base.html
+++ b/airline/templates/airline/base.html
@@ -6,7 +6,15 @@
     <title>Airline Management</title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/airline.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/buttons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+    <link rel="stylesheet" href="{% static 'css/flight_cards.css' %}">
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
+    <link rel="stylesheet" href="{% static 'css/management.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom">
@@ -27,12 +35,12 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="flightsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle show" href="#" id="flightsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
                             <i class="fas fa-plane-departure me-1"></i>Flights
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="flightsDropdown">
                             <li><a class="dropdown-item" href="{% url 'flight_list' %}">Manage Flights</a></li>
-                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">View Flights (with seats)</a></li>
+                            <li><a class="dropdown-item" href="{% url 'flight_list' %}">View Flights</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
